# Bottle_Sorting

./: README.md
src/: dashboard.py  pridiction.py
src/realsense-ros/realsense2_camera/launch/: rs_multiple_devices.launch
src/tm12_bottle_sorting/: CMakeLists.txt  OG_CMAKE  package.xml
src/tm12_bottle_sorting/launch/: bottle_sorting_system.launch  multi_camera.launch
src/tm12_bottle_sorting/scripts/: Bottle_detection.py  Bottle_detection_f.py  bottle_position.py  brand_detection.py  image_capture.py  image_depth_saver.py  image_depth_saver_1.py  lookup_transform.py  node9.py
src/tm12_bottle_sorting/src/: gripper_OFF.cpp  gripper_ON.cpp  move_robot.cpp  node_1.cpp  node_3.cpp  node_6.cpp  node_7.cpp  node_8.cpp
