<?xml version="1.0"?>
<package format="2">
  <name>tm12_bottle_sorting</name>
  <version>0.0.0</version>
  <description>The tm12_bottle_sorting package</description>

  <!-- Maintainer information -->
  <maintainer email="shantarao@todo.todo">shantarao</maintainer>

  <!-- License information -->
  <license>BSD</license>

  <!-- Dependency tags -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tm_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>boost</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tm_msgs</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>boost</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tm_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>boost</exec_depend>

  <!-- Export tag for additional information -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
